fix: table header title spacing issue

--- a/packages/react/src/components/Table/TableHead/_table-head.scss
+++ b/packages/react/src/components/Table/TableHead/_table-head.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  th[aria-sort] {
+    padding-left: 1rem;
+  }
+
   // override sort icons, so they stay in the middle, at xl size, too.
   &--xl {
     .#{$prefix}--table-sort__icon-unsorted,
